Optimized the visual polish of First ViewController

--- a/PitchPerfect/PitchPerfect/Base.lproj/Main.storyboard
+++ b/PitchPerfect/PitchPerfect/Base.lproj/Main.storyboard
@@ -18,23 +18,26 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="b7Q-6O-GeK">
-                                <rect key="frame" x="162.5" y="328.5" width="49" height="30"/>
-                                <color key="backgroundColor" red="0.0" green="0.97680455450000003" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <state key="normal" title="Record"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="b7Q-6O-GeK">
+                                <rect key="frame" x="110" y="266" width="155" height="155"/>
+                                <state key="normal" image="RecordButton"/>
                                 <connections>
                                     <action selector="recordAudio:" destination="BYZ-38-t0r" eventType="touchUpInside" id="1ZA-0i-xDl"/>
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tap to Record" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UXL-gR-T9O">
-                                <rect key="frame" x="134" y="366" width="107" height="21"/>
+                                <rect key="frame" x="134" y="429" width="107" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mxd-eo-5kf">
-                                <rect key="frame" x="135" y="395" width="106" height="30"/>
-                                <state key="normal" title="Stop Recording"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mxd-eo-5kf">
+                                <rect key="frame" x="155.5" y="466" width="64" height="64"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="64" id="P2K-AN-ggu"/>
+                                    <constraint firstAttribute="height" constant="64" id="gWc-Re-5bM"/>
+                                </constraints>
+                                <state key="normal" image="Stop"/>
                                 <connections>
                                     <action selector="stopRecording:" destination="BYZ-38-t0r" eventType="touchUpInside" id="m5e-r3-9tH"/>
                                 </connections>
@@ -44,15 +47,17 @@
                         <constraints>
                             <constraint firstItem="b7Q-6O-GeK" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="35q-W3-5an"/>
                             <constraint firstItem="mxd-eo-5kf" firstAttribute="centerX" secondItem="UXL-gR-T9O" secondAttribute="centerX" id="7gz-5x-LFk"/>
-                            <constraint firstItem="mxd-eo-5kf" firstAttribute="top" secondItem="UXL-gR-T9O" secondAttribute="bottom" constant="8" id="BLT-Y2-fey"/>
-                            <constraint firstItem="UXL-gR-T9O" firstAttribute="top" secondItem="b7Q-6O-GeK" secondAttribute="bottom" constant="7.5" id="KYz-jd-hfd"/>
+                            <constraint firstItem="mxd-eo-5kf" firstAttribute="top" secondItem="UXL-gR-T9O" secondAttribute="bottom" constant="16" id="BLT-Y2-fey"/>
+                            <constraint firstItem="UXL-gR-T9O" firstAttribute="top" secondItem="b7Q-6O-GeK" secondAttribute="bottom" constant="8" id="KYz-jd-hfd"/>
                             <constraint firstItem="b7Q-6O-GeK" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="W4y-Z7-qh3"/>
                             <constraint firstItem="UXL-gR-T9O" firstAttribute="centerX" secondItem="b7Q-6O-GeK" secondAttribute="centerX" id="klg-Xz-A4I"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
+                        <outlet property="recordButton" destination="b7Q-6O-GeK" id="HVl-8Y-3eD"/>
                         <outlet property="recordingLabel" destination="UXL-gR-T9O" id="X8f-n4-qwi"/>
+                        <outlet property="stopRecordingButton" destination="mxd-eo-5kf" id="Kxd-Zk-kIl"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -60,4 +65,8 @@
             <point key="canvasLocation" x="117.59999999999999" y="110.19490254872565"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="RecordButton" width="155" height="155"/>
+        <image name="Stop" width="155" height="155"/>
+    </resources>
 </document>
