--- a/PitchPerfect/PitchPerfect/Base.lproj/Main.storyboard
+++ b/PitchPerfect/PitchPerfect/Base.lproj/Main.storyboard
@@ -66,10 +66,10 @@
             </objects>
             <point key="canvasLocation" x="960.79999999999995" y="109.29535232383809"/>
         </scene>
-        <!--View Controller-->
+        <!--Play Sounds View Controller-->
         <scene sceneID="Tbg-u3-mFI">
             <objects>
-                <viewController id="Zjk-T8-Wzf" sceneMemberID="viewController">
+                <viewController id="Zjk-T8-Wzf" customClass="PlaySoundsViewController" customModule="PitchPerfect" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="yTc-Zv-m22">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
